--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/online_store
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
+flyway.url=jdbc:postgresql://localhost:5432
+flyway.schemas=online_store
+flyway.user=postgres
+flyway.password=postgres
